# 5g-analytics

./: main.py  pyproject.toml  replit_zip_error_log.txt
.cache/nix/: binary-cache-v6.sqlite
.cache/pypoetry/artifacts/5f/dd/51/60eff68aff69f9dc6d26b64d764f8c1d9d8ce88c9d19b5b992904af58e/: narwhals-1.6.3-py3-none-any.whl
.cache/pypoetry/artifacts/be/26/05/c65771504b94e942d33407bb7c7ed57e502793f3e64a038e38f7b8b6d6/: Faker-28.4.1-py3-none-any.whl
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: .agent_state_main.json  repl_state.json
.streamlit/: style.css
.upm/: store.json
